Fixed file path for mascot.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
-          <img src="assets/dr-kymn.png" alt="" class="mini-kymn" />
+          <img src="/dr-kymn.png" alt="" class="mini-kymn" />
         </a>
         <nav aria-label="Primary">
           <ul class="nav">
