Fixed second file path error on mascot img.

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <header class="site-header">
       <img
-        src="/dr-kymn.png"
+        src="dr-kymn.png"
         alt="Illustration of Dr. KYMN, a friendly female doctor waving"
         class="kymn-hero"
       />
