Make the site pages consistent
- Navigation is now the same on every page (Home, Who Qualifies?, Apply, FAQ)
- Fixed the structure so links sit inside a proper list
- Made sure all pages are using the same Montserrat fonts
- Added alt text for the Who Qualifies? hero image
- Left the CSS completely alone

--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>FAQ — KYMN</title>
+    <title>FAQ | The Kentucky Medicaid Notebook</title>
     <meta
       name="description"
       content="Common questions about Kentucky Medicaid basics."
@@ -21,12 +21,12 @@
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
-          <img src="assets/dr-kymn.png" alt="" class="mini-kymn" />
-          <!-- removed redundant brand text -->
+          <img src="dr-kymn.png" alt="" class="mini-kymn" />
         </a>
         <nav aria-label="Primary">
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
+            <li><a href="who-qualifies.html">Who Qualifies?</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="faq.html" aria-current="page">FAQ</a></li>
           </ul>
@@ -120,7 +120,10 @@
     <footer class="site-footer">
       <p>
         <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
-        affiliated with any agency. Made in Lexington, KY.
+        affiliated with any agency. Made in Lexington, KY, by
+        <a href="https://sleepingbear.us" target="_blank" rel="noopener"
+          >Sleeping Bear Labs</a
+        >.
       </p>
     </footer>
   </body>
