--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>KYMN — Kentucky Medicaid Notebook</title>
+    <title>Welcome | The Kentucky Medicaid Notebook</title>
     <meta
       name="description"
-      content="Plain‑language Kentucky Medicaid basics: what to bring, where to start, and how to apply."
+      content="Plain‑language Kentucky Medicaid basics: what to bring, where to start and how to apply."
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;900&display=swap"
@@ -94,14 +94,12 @@
           stroke="currentColor"
           stroke-width="2"
         />
-        <!-- vertical stroke of $ -->
         <path
           d="M12 5v14"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
         />
-        <!-- S curve of $ -->
         <path
           d="M16.5 8.5c-.9-1.1-2.3-1.8-3.9-1.8-2.1 0-3.6 1-3.6 2.5 0 3.1 7.6 1.9 7.6 5.2
            0 1.5-1.8 2.7-4.1 2.7-1.7 0-3.3-.6-4.2-1.6"
@@ -111,7 +109,6 @@
           stroke-linecap="round"
         />
       </symbol>
-
       <symbol id="icon-bill" viewBox="0 0 24 24">
         <rect
           x="5"
@@ -161,6 +158,7 @@
         <nav aria-label="Primary">
           <ul class="nav">
             <li><a href="index.html" aria-current="page">Home</a></li>
+            <li><a href="who-qualifies.html">Who Qualifies?</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
@@ -171,7 +169,7 @@
     <header class="site-header">
       <img
         src="dr-kymn.png"
-        alt="Illustration of Dr. KYMN, a friendly female doctor waving"
+        alt="Illustration of Dr. KYMN, a friendly squirrel waving"
         class="kymn-hero"
       />
       <h1 class="brand">Hello, I'm Dr. KYMN</h1>
@@ -209,7 +207,7 @@
               <svg><use href="#icon-home" /></svg>
             </div>
             <h3>Proof of Kentucky Residency</h3>
-            <p>Recent mail, lease, or utility bill with your KY address.</p>
+            <p>Recent mail, lease or utility bill with your KY address.</p>
           </li>
 
           <li class="info-card">
@@ -233,9 +231,11 @@
 
     <footer class="site-footer">
       <p>
-        <strong>*Dr. KYMN</strong> is a friendly guide, not a real doctor. Not
-        affiliated with any agency. Made in Lexington, Ky., by Sleeping Bear
-        Labs.
+        <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
+        affiliated with any agency. Made in Lexington, KY, by
+        <a href="https://sleepingbear.us" target="_blank" rel="noopener"
+          >Sleeping Bear Labs</a
+        >.
       </p>
     </footer>
   </body>
