Add Who Accepts? page and update nav
- Created new Who Accepts? page with cards and links to provider directories
- Updated nav on all pages to include Who Accepts?
- Removed Anthem since it no longer participates in KY Medicaid
- No CSS changes.

--- a/faq.html
+++ b/faq.html
@@ -27,6 +27,7 @@
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
+            <li><a href="who-accepts.html">Who Accepts?</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="faq.html" aria-current="page">FAQ</a></li>
           </ul>
