--- a/who-qualifies.html
+++ b/who-qualifies.html
@@ -27,11 +27,8 @@
         <nav aria-label="Primary">
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
-            <li>
-              <a href="who-qualifies.html" aria-current="page"
-                >Who Qualifies?</a
-              >
-            </li>
+            <li><a href="who-qualifies.html" aria-current="page">Who Qualifies?</a></li>
+            <li><a href="who-accepts.html">Who Accepts?</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
@@ -40,11 +37,7 @@
     </header>
 
     <header class="site-header">
-      <img
-        class="kymn-hero"
-        src="dr-kymn.png"
-        alt="Illustration of Dr. KYMN, a friendly squirrel waving"
-      />
+      <img class="kymn-hero" src="dr-kymn.png" alt="Illustration of Dr. KYMN, a friendly squirrel waving" />
       <h1 class="brand page-title">Who Qualifies?</h1>
       <p class="lead">
         Kentucky Medicaid &amp; KCHIP — 2025. Plain‑language income limits with
@@ -57,7 +50,7 @@
         Income‑based eligibility (MAGI)
       </h2>
       <p class="tag">
-        These groups use FPL percentage and MAGI rules. Keep scrolling for
+        These groups use FPL% and MAGI rules. Keep scrolling for
         Aged/Blind/Disabled (ABD) rules.
       </p>
 
@@ -75,7 +68,7 @@
             </svg>
           </div>
           <h3>Adults (ages 19–64)</h3>
-          <p><strong>Up to 138 percent FPL</strong> &middot; MAGI rules.</p>
+          <p><strong>Up to 138% FPL</strong> &middot; MAGI rules.</p>
         </li>
 
         <li class="info-card">
@@ -89,7 +82,7 @@
           </div>
           <h3>Pregnancy</h3>
           <p>
-            <strong>Up to 200 percent FPL</strong>. Includes coverage through
+            <strong>Up to 200% FPL</strong>. Includes coverage through
             <strong>12 months postpartum</strong>.
           </p>
         </li>
@@ -109,28 +102,28 @@
           </div>
           <h3>Children &amp; teens (under 19)</h3>
           <p>
-            Medicaid: <strong>up to 200 percent FPL</strong> &middot; KCHIP
-            (CHIP): <strong>up to 218 percent FPL</strong>.
+            Medicaid: <strong>up to 200% FPL</strong> &middot; KCHIP (CHIP):
+            <strong>up to 218% FPL</strong>.
           </p>
         </li>
       </ul>
 
       <details class="faq">
-        <summary>What is FPL, and what does "percent of FPL" mean?</summary>
+        <summary>What is FPL? What does %FPL mean?</summary>
         <p>
           <strong>Federal Poverty Level (FPL)</strong> is a yearly income
-          baseline set by the federal government. Your percent of FPL depends on
-          household size and your MAGI. 2025 examples: one person =
-          <strong>$15,650</strong>/year; three people =
+          baseline set by the federal government. Your %FPL depends on household
+          size and your MAGI. 2025 examples: 1 person =
+          <strong>$15,650</strong>/year; 3 people =
           <strong>$26,650</strong>/year.
         </p>
       </details>
 
-      <h2 class="section-title" id="abd">Aged, Blind or Disabled (ABD)</h2>
+      <h2 class="section-title" id="abd">Aged, Blind, or Disabled (ABD)</h2>
       <p class="tag">
-        ABD Medicaid does <strong>not</strong> use a flat FPL percentage.
-        Kentucky applies SSI‑related income and resource rules; some applicants
-        may qualify via <em>spenddown</em>.
+        ABD Medicaid does <strong>not</strong> use a flat FPL%. Kentucky applies
+        SSI‑related income and resource rules; some applicants may qualify via
+        <em>spenddown</em>.
       </p>
 
       <ul class="card-grid">
@@ -177,7 +170,7 @@
               href="https://kidshealth.ky.gov/Pages/eligibility.aspx"
               target="_blank"
               rel="noopener"
-              >KCHIP eligibility (children up to 218 percent FPL)</a
+              >KCHIP eligibility (children up to 218% FPL)</a
             >
           </li>
           <li>
@@ -205,14 +198,14 @@
             >
           </li>
         </ul>
-        <p class="tag"><strong>Last updated:</strong> Aug. 22, 2025</p>
+        <p class="tag"><strong>Last updated:</strong> August 22, 2025</p>
       </section>
 
       <section aria-labelledby="sources" style="margin-top: 1rem">
         <h2 id="sources" class="section-title">Sources</h2>
         <ol>
           <li>
-            kynect (KY): Adults 138 percent FPL; Pregnancy 200 percent FPL —
+            kynect (KY): Adults 138% FPL; Pregnancy 200% FPL —
             <a
               href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
               target="_blank"
@@ -221,7 +214,7 @@
             >
           </li>
           <li>
-            KCHIP/KidsHealth: Children up to 218 percent FPL —
+            KCHIP/KidsHealth: Children up to 218% FPL —
             <a
               href="https://kidshealth.ky.gov/Pages/eligibility.aspx"
               target="_blank"
@@ -232,7 +225,7 @@
           <li>
             KHBE:
             <em>Federal Poverty Level (FPL) 2025 Medicaid Table</em> (effective
-            April 1, 2025) —
+            Apr 1, 2025) —
             <a
               href="https://khbe.ky.gov/About/FactsandResources/FPL%20Chart%202025.pdf"
               target="_blank"
