--- a/apply.html
+++ b/apply.html
@@ -27,6 +27,7 @@
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
+            <li><a href="who-accepts.html">Who Accepts?</a></li>
             <li><a href="apply.html" aria-current="page">Apply</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
