--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
           <ul class="nav">
             <li><a href="index.html" aria-current="page">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
+            <li><a href="who-accepts.html">Who Accepts?</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
