Add Who Accepts? to Who Qualifies nav (HTML only)

--- a/who-qualifies.html
+++ b/who-qualifies.html
@@ -27,7 +27,11 @@
         <nav aria-label="Primary">
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="who-qualifies.html" aria-current="page">Who Qualifies?</a></li>
+            <li>
+              <a href="who-qualifies.html" aria-current="page"
+                >Who Qualifies?</a
+              >
+            </li>
             <li><a href="who-accepts.html">Who Accepts?</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="faq.html">FAQ</a></li>
@@ -37,7 +41,11 @@
     </header>
 
     <header class="site-header">
-      <img class="kymn-hero" src="dr-kymn.png" alt="Illustration of Dr. KYMN, a friendly squirrel waving" />
+      <img
+        class="kymn-hero"
+        src="dr-kymn.png"
+        alt="Illustration of Dr. KYMN, a friendly squirrel waving"
+      />
       <h1 class="brand page-title">Who Qualifies?</h1>
       <p class="lead">
         Kentucky Medicaid &amp; KCHIP — 2025. Plain‑language income limits with
