fix(who-qualifies): restore proper <ul> structure; keep decorative SVG + links

--- a/index.html
+++ b/index.html
@@ -155,11 +155,12 @@
         <a class="brandlink" href="index.html">
           <img src="dr-kymn.png" alt="" class="mini-kymn" />
         </a>
-        <nav aria-label="Primary">
+        <nav class="site-nav" aria-label="Primary">
           <ul class="nav">
             <li><a href="index.html" aria-current="page">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
             <li><a href="who-accepts.html">Who Accepts?</a></li>
+            <li><a href="who-drives.html">Who Drives?</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
