--- a/who-accepts.html
+++ b/who-accepts.html
@@ -23,11 +23,14 @@
         <a class="brandlink" href="index.html">
           <img src="dr-kymn.png" alt="" class="mini-kymn" />
         </a>
-        <nav aria-label="Primary">
+        <nav class="site-nav" aria-label="Primary">
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="who-qualifies.html">Who Qualifies?</a></li>
-            <li><a href="who-accepts.html" aria-current="page">Who Accepts?</a></li>
+            <li>
+              <a href="who-accepts.html" aria-current="page">Who Accepts?</a>
+            </li>
+            <li><a href="who-drives.html">Who Drives?</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
@@ -43,7 +46,8 @@
       />
       <h1 class="brand page-title">Who Accepts?</h1>
       <p class="lead">
-        Once you’re approved, here’s how to know where you can use your Medicaid card.
+        Once you’re approved, here’s how to know where you can use your Medicaid
+        card.
       </p>
     </header>
 
@@ -52,14 +56,16 @@
         <li class="info-card">
           <h3>Call your provider</h3>
           <p>
-            The easiest way is to ask directly. Call your doctor, clinic, hospital, or pharmacy and ask if they take Kentucky Medicaid.
+            The easiest way is to ask directly. Call your doctor, clinic,
+            hospital or pharmacy and ask if they take Kentucky Medicaid.
           </p>
         </li>
 
         <li class="info-card">
           <h3>Search the official directory</h3>
           <p>
-            Use the state’s provider search to find doctors, clinics, and specialists who accept Medicaid.
+            Use the state’s provider search to find doctors, clinics and
+            specialists who accept Medicaid.
           </p>
           <p>
             <a
@@ -74,7 +80,8 @@
         <li class="info-card">
           <h3>Pharmacies & Urgent Care</h3>
           <p>
-            Many large pharmacy chains and urgent care centers accept Medicaid, but it’s best to call ahead before your visit.
+            Many large pharmacy chains and urgent care centers accept Medicaid,
+            but it’s best to call ahead before your visit.
           </p>
         </li>
       </ul>
