--- a/who-qualifies.html
+++ b/who-qualifies.html
@@ -17,14 +17,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a class="skip-link" href="#main">Skip to main content</a>
+    <a class="skip-link" href="#main">Skip to content</a>
 
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
           <img class="mini-kymn" src="dr-kymn.png" alt="" />
         </a>
-        <nav aria-label="Primary">
+        <nav class="site-nav" aria-label="Primary">
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li>
@@ -33,6 +33,7 @@
               >
             </li>
             <li><a href="who-accepts.html">Who Accepts?</a></li>
+            <li><a href="who-drives.html">Who Drives?</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
@@ -62,10 +63,10 @@
         Aged/Blind/Disabled (ABD) rules.
       </p>
 
-      <ul class="card-grid">
+      <ul class="card-grid" role="list">
         <li class="info-card">
           <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24" role="img" aria-label="">
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
               <circle cx="12" cy="8" r="4" fill="currentColor" />
               <path
                 d="M4 20c0-3.3 3.6-6 8-6s8 2.7 8 6"
@@ -134,7 +135,7 @@
         <em>spenddown</em>.
       </p>
 
-      <ul class="card-grid">
+      <ul class="card-grid" role="list">
         <li class="info-card">
           <div class="icon-wrap" aria-hidden="true">
             <svg viewBox="0 0 24 24">
@@ -150,11 +151,10 @@
           <h3>ABD rules (summary)</h3>
           <p>
             <strong>Monthly income:</strong> very low SSI‑related standard (see
-            CHFS). <br /><strong>Resources:</strong> about
-            <strong>$2,000</strong> (individual). <br /><strong
-              >Spenddown:</strong
-            >
-            may apply; check CHFS.
+            CHFS). <br />
+            <strong>Resources:</strong> about
+            <strong>$2,000</strong> (individual). <br />
+            <strong>Spenddown:</strong> may apply; check CHFS.
           </p>
         </li>
       </ul>
