--- a/who-qualifies.html
+++ b/who-qualifies.html
@@ -25,7 +25,18 @@
           <img class="mini-kymn" src="dr-kymn.png" alt="" />
         </a>
         <nav class="site-nav" aria-label="Primary">
-          <ul class="nav">
+          <button
+            class="nav-toggle"
+            aria-controls="primary-menu"
+            aria-expanded="false"
+          >
+            <span class="sr-only">Menu</span>
+            <span class="bar" aria-hidden="true"></span>
+            <span class="bar" aria-hidden="true"></span>
+            <span class="bar" aria-hidden="true"></span>
+          </button>
+
+          <ul id="primary-menu" class="menu">
             <li><a href="index.html">Home</a></li>
             <li>
               <a href="who-qualifies.html" aria-current="page"
@@ -272,5 +283,6 @@
         >.
       </p>
     </footer>
+    <script src="js/nav.js" defer></script>
   </body>
 </html>
