feat(nav): add After You Apply + Renewal & Redetermination links across site
- Updated topbar nav in all pages with new consistent block
- Added links for After You Apply and Renewal & Redetermination
- Set aria-current="page" on each respective page.

--- a/renewal.html
+++ b/renewal.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>After You Apply | The Kentucky Medicaid Notebook</title>
+    <title>Renewal & Redetermination | The Kentucky Medicaid Notebook</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="What to do after you submit a Kentucky Medicaid or KCHIP application: watch for mail, respond to requests, track your case, renew on time, and keep your info current."
+      content="How Kentucky Medicaid renewal (redetermination) works: watch for notices, update contact info, respond on time, and keep coverage active."
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -42,12 +42,8 @@
             <li><a href="who-accepts.html">Who Accepts?</a></li>
             <li><a href="who-drives.html">Who Drives?</a></li>
             <li><a href="apply.html">Apply</a></li>
-            <li>
-              <a href="after-you-apply.html" aria-current="page"
-                >After You Apply</a
-              >
-            </li>
-            <li><a href="renewal.html">Renewal</a></li>
+            <li><a href="after-you-apply.html">After You Apply</a></li>
+            <li><a href="renewal.html" aria-current="page">Renewal</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
         </nav>
@@ -60,65 +56,21 @@
         src="dr-kymn.png"
         alt="Illustration of Dr. KYMN, a friendly squirrel waving"
       />
-      <h1 class="brand page-title">After You Apply</h1>
+      <h1 class="brand page-title">Renewal &amp; Redetermination</h1>
       <p class="lead">
-        You submitted your application. Here’s what to expect next and what to
-        do to keep things on track.
+        Medicaid is reviewed every year. Here’s how to keep your coverage
+        active.
       </p>
     </header>
 
-    <main id="main" class="container" aria-labelledby="due-diligence">
-      <h2 id="due-diligence" class="section-title">Your next steps</h2>
-      <p class="tag">Simple due‑diligence checklist after you apply.</p>
+    <main id="main" class="container" aria-labelledby="renewal">
+      <h2 id="renewal" class="section-title">Your yearly checklist</h2>
+      <p class="tag">Plain‑language steps to get through renewal smoothly.</p>
 
       <ul class="card-grid" role="list">
         <li class="info-card">
           <div class="icon-wrap" aria-hidden="true">
             <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-              <path
-                d="M3 7l9 6 9-6v10H3z"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-              />
-              <path
-                d="M3 7l9 6 9-6"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-              />
-            </svg>
-          </div>
-          <h3>1) Watch your mail</h3>
-          <p>
-            Look for an <strong>approval/denial notice</strong>. If approved,
-            your <strong>Medicaid card</strong> may arrive separately. Keep all
-            letters in a safe place.
-          </p>
-        </li>
-
-        <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
-              <path
-                d="M4 12h16M12 4v16"
-                stroke="currentColor"
-                stroke-width="2"
-                fill="none"
-              />
-            </svg>
-          </div>
-          <h3>2) Respond if they ask for more</h3>
-          <p>
-            If the state requests <strong>extra documents</strong> (ID, proof of
-            income, etc.), send them <strong>by the deadline</strong>. Missing
-            deadlines can pause or deny coverage.
-          </p>
-        </li>
-
-        <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
               <circle
                 cx="12"
                 cy="12"
@@ -128,17 +80,59 @@
                 stroke-width="2"
               />
               <path
-                d="M12 6v6l4 2"
+                d="M12 7v5l3 2"
+                fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-                fill="none"
               />
             </svg>
           </div>
-          <h3>3) Track your case</h3>
+          <h3>1) Watch for your notice</h3>
           <p>
-            Check status and messages in <strong>kynect</strong>. Write down
-            your <strong>case number</strong> for phone calls.
+            The state will mail a <strong>renewal packet or notice</strong>.
+            Open it right away and note any <strong>deadline</strong>.
+          </p>
+        </li>
+
+        <li class="info-card">
+          <div class="icon-wrap" aria-hidden="true">
+            <svg viewBox="0 0 24 24">
+              <path
+                d="M4 5h16v14H4z"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+              />
+              <path
+                d="M7 8h10M7 12h7M7 16h6"
+                stroke="currentColor"
+                stroke-width="2"
+              />
+            </svg>
+          </div>
+          <h3>2) Update your info first</h3>
+          <p>
+            In <strong>kynect</strong>, confirm your address, phone, income, and
+            household. Out‑of‑date info can cause a loss of coverage.
+          </p>
+        </li>
+
+        <li class="info-card">
+          <div class="icon-wrap" aria-hidden="true">
+            <svg viewBox="0 0 24 24">
+              <path
+                d="M6 7h12v10H6z"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+              />
+              <path d="M8 9h8M8 12h6" stroke="currentColor" stroke-width="2" />
+            </svg>
+          </div>
+          <h3>3) Complete and return on time</h3>
+          <p>
+            If the packet asks for <strong>documents</strong> (ID, income,
+            etc.), upload or send them <strong>before the deadline</strong>.
           </p>
         </li>
 
@@ -159,35 +153,10 @@
               <path d="M8 9h8M8 12h5" stroke="currentColor" stroke-width="2" />
             </svg>
           </div>
-          <h3>4) Use your card</h3>
+          <h3>4) Watch your messages</h3>
           <p>
-            Bring your <strong>Medicaid ID card</strong> to appointments.
-            Confirm the provider <strong>accepts Kentucky Medicaid</strong> (see
-            <a href="who-accepts.html">Who Accepts?</a>).
-          </p>
-        </li>
-
-        <li class="info-card">
-          <div class="icon-wrap" aria-hidden="true">
-            <svg viewBox="0 0 24 24">
-              <path
-                d="M4 5h16v14H4z"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-              />
-              <path
-                d="M7 8h10M7 12h7M7 16h6"
-                stroke="currentColor"
-                stroke-width="2"
-              />
-            </svg>
-          </div>
-          <h3>5) Keep info up to date</h3>
-          <p>
-            Report changes to
-            <strong>address, phone, income, household</strong> right away.
-            Out‑of‑date info can lead to loss of coverage.
+            Check <strong>kynect</strong> for messages. If the state asks for
+            more, respond quickly to avoid a gap in coverage.
           </p>
         </li>
 
@@ -208,28 +177,54 @@
               />
             </svg>
           </div>
-          <h3>6) Renewal every year</h3>
+          <h3>5) If you miss it</h3>
           <p>
-            Medicaid uses <strong>annual redetermination</strong>. Watch for a
-            renewal notice and respond promptly. If you miss it, you may have a
-            short window to fix it.
+            If coverage closes because you missed a step, act fast. You may have
+            a short window to <strong>submit what’s missing</strong> and restore
+            coverage.
+          </p>
+        </li>
+
+        <li class="info-card">
+          <div class="icon-wrap" aria-hidden="true">
+            <svg viewBox="0 0 24 24">
+              <path
+                d="M4 12h16M12 4v16"
+                stroke="currentColor"
+                stroke-width="2"
+                fill="none"
+              />
+            </svg>
+          </div>
+          <h3>6) Report changes year‑round</h3>
+          <p>
+            Don’t wait for renewal to report changes. Update
+            <strong>address, phone, income, and household</strong> whenever they
+            change.
           </p>
         </li>
       </ul>
 
       <details class="faq">
-        <summary>How do I check messages or upload documents?</summary>
+        <summary>How do I upload documents or check my renewal?</summary>
         <p>
-          Log in to <strong>kynect</strong> to view notices and upload requested
-          items. Keep digital copies of what you send and note the date
-          submitted.
+          Log in to <strong>kynect</strong> to see notices, upload files, and
+          confirm your status. Keep copies of what you send and note the date.
         </p>
       </details>
 
       <section aria-labelledby="links" style="margin-top: 1rem">
         <h2 id="links" class="section-title">Official links</h2>
-        <p class="tag">Use Kentucky’s official sites to manage your case.</p>
+        <p class="tag">Use Kentucky’s official sites to manage renewal.</p>
         <ul>
+          <li>
+            <a
+              href="https://khbe.ky.gov/Enrollment/Pages/MedicaidRenewals.aspx"
+              target="_blank"
+              rel="noopener"
+              >Medicaid renewals (KHBE)</a
+            >
+          </li>
           <li>
             <a
               href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
@@ -240,18 +235,10 @@
           </li>
           <li>
             <a
-              href="https://khbe.ky.gov/Enrollment/Pages/MedicaidRenewals.aspx"
-              target="_blank"
-              rel="noopener"
-              >Medicaid renewals and contact updates (KHBE)</a
-            >
-          </li>
-          <li>
-            <a
               href="https://khbe.ky.gov/Enrollment/Pages/PHEUnwinding.aspx"
               target="_blank"
               rel="noopener"
-              >Keep coverage — notices &amp; what to do (KHBE)</a
+              >Keep coverage: notices &amp; what to do (KHBE)</a
             >
           </li>
         </ul>
@@ -261,11 +248,10 @@
       <section aria-labelledby="seealso" style="margin-top: 1rem">
         <h2 id="seealso" class="section-title">See also</h2>
         <ul>
-          <li><a href="who-accepts.html">Who Accepts?</a></li>
+          <li><a href="after-you-apply.html">After You Apply</a></li>
           <li><a href="required-documents.html">Required Documents</a></li>
           <li><a href="faq.html">FAQs</a></li>
           <li><a href="apply.html">Apply</a></li>
-          <li><a href="after-you-apply.html">After You Apply</a></li>
         </ul>
       </section>
     </main>
