--- a/who-accepts.html
+++ b/who-accepts.html
@@ -21,7 +21,7 @@
     <header class="topbar">
       <div class="wrap">
         <a class="brandlink" href="index.html">
-          <img src="dr-kymn.png" alt="" class="mini-kymn" />
+          <img class="mini-kymn" src="dr-kymn.png" alt="" />
         </a>
         <nav class="site-nav" aria-label="Primary">
           <button
@@ -43,6 +43,8 @@
             </li>
             <li><a href="who-drives.html">Who Drives?</a></li>
             <li><a href="apply.html">Apply</a></li>
+            <li><a href="after-you-apply.html">After You Apply</a></li>
+            <li><a href="renewal.html">Renewal</a></li>
             <li><a href="faq.html">FAQ</a></li>
           </ul>
         </nav>
